--- a/labs/app_service_demo/blazor.trapistan/blazor.trapistan.Web/Components/Pages/Home.razor
+++ b/labs/app_service_demo/blazor.trapistan/blazor.trapistan.Web/Components/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@rendermode InteractiveServer
 
 <PageTitle>Home</PageTitle>
 
@@ -10,8 +11,7 @@
 <p>I'm thinking of a number between 1 and 100. Can you guess what it is?</p>
 
 <input @bind="UserGuess" type="number" placeholder="Enter your guess" />
-<button @onclick="CheckGuess">Submit Guess</button>
-
+<button class="btn btn-primary" @onclick="CheckGuess">Submit Guess</button>
 <p>@Message</p>
 
 @code {
